# mjpg-streamer

./: README.md
mjpg-streamer-experimental/: CMakeLists.txt  Makefile
mjpg-streamer-experimental/plugins/input_file/: Makefile
mjpg-streamer-experimental/plugins/input_uvc/: jpeg_utils.c  v4l2uvc.c
